# rume

./: .gitignore  Cargo.toml  README.md  default.profraw
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
examples/beep/: Cargo.toml
examples/beep/src/: main.rs
examples/lab/: Cargo.toml
examples/lab/src/: generator.rs  main.rs  processor.rs
examples/to_wav/: Cargo.toml
examples/to_wav/src/: dsp.rs  main.rs
rume/: Cargo.toml
rume/examples/: beep.rs  modulate.rs
rume/src/: endpoints.rs  lab.rs  lib.rs  processors.rs
rume/src/lab/: generator.rs  mod.rs  plot.rs  processor.rs  spec.rs
rume_core/: Cargo.toml
rume_core/src/: chain.rs  endpoints.rs  io.rs  lib.rs  proc.rs  sort.rs
rume_core/src/dsp/: convert.rs  lut.rs  mod.rs  osc.rs  phase.rs  waves.rs
rume_core/src/graph/: chain.rs  endpoints.rs  io.rs  mod.rs  proc.rs  sort.rs
rume_macros/: Cargo.toml
rume_macros/src/: graph.rs  io.rs  lib.rs  proc.rs
