[package]
name = "rume"
version = "0.0.0"
authors = ["Nico Chatzi <nico.chatzigianis@focusrite.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://github.com/nicochatzi/rume"
repository = "https://github.com/nicochatzi/rume"
keywords = ["dsp", "audio", "graph"]
categories = ["algorithms", "data-structures", "multimedia"]

[dependencies]
rume_core = { path = "../rume_core" }
rume_macros = { path = "../rume_macros" }

[dev-dependencies]
hound = "3.4.0"
cpal = "0.13.1"
anyhow = "1.0.34"