[package]
name = "rume"
version = "0.0.0"
authors = ["Nico Chatzi <nico.chatzigianis@focusrite.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://github.com/nicochatzi/rume"
repository = "https://github.com/nicochatzi/rume"
keywords = ["dsp", "audio", "graph", "no_std"]
categories = ["algorithms", "data-structures", "multimedia"]

[features]
default = ["std"]
std = ["rume_core/std", "hound"]
lab = ["std", "hound", "plotters"]

[dependencies]
rume_core = { path = "../rume_core" }
rume_macros = { path = "../rume_macros" }

[dependencies.hound]
version = "3.4.0"
optional = true

[dependencies.plotters]
version = "0.3.0"
optional = true

[dev-dependencies]
hound = "3.4.0"
cpal = "0.13.1"
anyhow = "1.0.34"

[[example]]
name = "beep"
required-features = ["std"]

[[example]]
name = "modulate"
required-features = ["std"]
