[package]
name = "rume_core"
version = "0.0.0"
authors = ["Nico Chatzi <nico.chatzigianis@focusrite.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://github.com/nicochatzi/rume"
repository = "https://github.com/nicochatzi/rume"
keywords = ["dsp", "audio", "graph", "no_std"]
categories = [""]

[dependencies]
heapless = "0.7.3"
libm = { version = "0.2.1", default-features = false }

[features]
default = []
std = []
