[package]
name = "rume_macros"
version = "0.1.0"
authors = ["Nico Chatzi <nico.chatzigianis@focusrite.com>"]
edition = "2018"

[lib]
name = "rume_macros"
proc-macro = true

[dependencies]
core = { package = "rume_core", path = "../rume_core" }
quote = "1.0.7"
syn = { version = "1.0.50", features = ["full" , "parsing"] }
