[package]
name = "rume_macros"
version = "0.0.0"
authors = ["Nico Chatzi <nico.chatzigianis@focusrite.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://github.com/nicochatzi/rume"
repository = "https://github.com/nicochatzi/rume"
keywords = ["dsp", "audio", "graph"]
categories = [""]

[lib]
name = "rume_macros"
proc-macro = true

[dependencies]
core = { package = "rume_core", path = "../rume_core" }
quote = "1.0.7"
syn = { version = "1.0.51", features = ["parsing"] }
