[package]
name = "beep"
version = "0.1.0"
authors = ["Nico Chatzi <nico.chatzigianis@focusrite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rume = { path = "../../rume" }
heapless = "0.5.6"
cpal = "0.13.1"
anyhow = "1.0.34"